# revo

./: .gitignore  Cargo.toml  README.md  pop_config.json
.github/workflows/: rust-test-lint.yml
evo_packer/: Cargo.toml  README.md  config.json5
evo_packer/src/: main.rs  packer.rs  packer_data.rs
evo_salesman/: .gitignore  Cargo.toml  README.md  config.json  config.json5  pop_config.json
evo_salesman/src/: lib.rs  main.rs  salesman.rs  salesman_data.rs
evo_true_packer/: Cargo.toml  config.json5
evo_true_packer/src/: lib.rs  main.rs  packer.rs  packer_data.rs  sweep.rs
funtree/: Cargo.toml  README.md  config.json  config.json5
funtree/src/: expression.rs  funtree_data.rs  funtree_individual.rs  leaf.rs  lib.rs  main.rs  operation.rs  val.rs
playground/: Cargo.toml  README.md  config.json  config.json5  pop_config.json
playground/src/: evo_salesman_gas.rs  ind_display.rs  lib.rs  main.rs  main_app.rs  main_window.rs  pop_display.rs  social_distance_gas.rs
revo/: Cargo.toml  README.md  pop_config.json
revo/example/: Cargo.toml  pop_config.json
revo/example/src/: basic_individual.rs  lib.rs  main.rs
revo/src/: basic_individual.rs  config.rs  evo_individual.rs  evo_population.rs  lib.rs  main.rs  pop_config.rs  population.rs  testing.rs  utils.rs
social_distance/: .gitignore  Cargo.toml  README.md  config.json5  pop_config.json
social_distance/src/: lib.rs  main.rs  social_distance.rs
src/: basic_individual.rs  lib.rs  main.rs
src/population/: evo_individual.rs  mod.rs  pop_config.rs  population.rs
src/revo/: evo_individual.rs  mod.rs  pop_config.rs  population.rs
