[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.17.1" }
rand = "0.8.4"
image = "0.24.6"
strum = "0.24.1"
strum_macros = "0.24.3"

revo = { path = "../revo", version = "*" }
social_distance =  { path = "../social_distance", version = "*" }
evo_salesman = { path = "../evo_salesman", version = "*" }
funtree = { path = "../funtree", version = "*" }

